@@ -89,6 +89,9 @@ RELEASE 0.95 - XXX
 
   - Correct error message spellings of "non-existant" to "non-existent."
 
+  - When scanning for libraries to link with, don't append $LIBPREFIXES
+    or $LIBSUFFIXES values to the $LIBS values if they're already present.
+
   From Vincent Risi:
 
   - Add support for the bcc32, ilink32 and tlib Borland tools.
